ported from UXP: - Issue #2790 - Part 5: Persistent highlight despite blur click (156c7550) - Issue #2790 - Cleanup: Remove debugging lines (459ed6ea) - Issue #2790 - Cleanup: Remove whitespaces (70cbf0df) - Issue #2790 - Part 6: Highlight color change and remove important (61ad3b8d) - Issue #2790 - Part 7: Setting of contrasting color and fixing of last commit's issues (61f92f89)
and added CallerType::System to GetValue()/GetValueInternal().

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -110,6 +110,14 @@ input {
   overflow-clip-box: content-box;
 }
 
+/* Autofill highlight - placed immediately after base input styles */
+input:-moz-autofill-highlight,
+select:-moz-autofill-highlight,
+textarea:-moz-autofill-highlight {
+  background-color: #fffcd0 !important;
+  color: #090909;
+}
+
 input > .anonymous-div,
 input::placeholder {
   word-wrap: normal !important;
@@ -1156,15 +1164,4 @@ input[type="number"] > div > div > div:hover {
 input[type="date"],
 input[type="time"] {
   overflow: hidden !important;
-}
-
-/* Autofill highlight for internal-only pseudo-class */
-input:-moz-autofill-highlight,
-select:-moz-autofill-highlight,
-textarea:-moz-autofill-highlight {
-  background-color: #ffff99 !important;
-}
-
-.custom-autofill-highlight {
-  background: yellow !important;
 }
